# RetroForth 2021.7 (In-Progress) Release Notes

## Core Language

## Major Changes

- address 5 is now a pointer to `interpret`
- address 6 is now a pointor to `err:notfound`
- address 7 now points to TIB
- address 8 points to end of TIB

## Added

- `if:` and `-if:`
- `c:get` to retro.forth
- `s:get` to retro.forth
- `listen` to retro.forth
- added `Base`
- added `decimal`
- added `hex`
- added `octal`
- added `binary`

## Renamed

- `s:split/string` replaces `s:split-on-string`
- `s:split/char` replaces `s:split`

## Deprecated

- `s:split-on-string`
- `s:split`


## I/O

- floating point

  - increased precision of `f:E` and `f:PI` (Kiyoshi)

## Toolchain

## VM

- all

  - no longer hard code TIB address (pull from image instead)

- nga-c

  - retro.c no longer does dictionary searches to find
    needed resources in image
  - shift instruction no longer using an unneeded multiply
    (Arland Childers)
  - retro-repl.c now uses an external image
  - removed barebones.c (overlaps w/new retro-repl.c)
  - retro-runtime.c now based on standard retro.c
  - changed behavior of -t command line argument (Rick)

- nga-nim

  - fix bug in VM_SH
  - minor formatting adjustments
  - start work to report some errors

## Examples

- add archive, archive-info, archive-extract
- add delete-file
- variables-and-formulas now in UTF8 (Marcus Antonius)

## Documentation

- removed references to old command line arguments
- removed reference to the no longer existing "ok" prompt
- add a note that mentions that Retro does not display a prompt
- fixed typos (rick_carlino)
## Testing

- add small test images for each instruction