@@ -31,7 +31,6 @@
 - `s:split-on-string`
 - `s:split`
 
-
 ## I/O
 
 - floating point
@@ -56,6 +55,11 @@
   - removed barebones.c (overlaps w/new retro-repl.c)
   - retro-runtime.c now based on standard retro.c
   - changed behavior of -t command line argument (Rick)
+  - fixed a bug in `script:current-line`
+
+- nga-cxx
+
+  - initial implmemtation from Arland Childers
 
 - nga-nim
 
@@ -75,6 +79,7 @@
 - removed reference to the no longer existing "ok" prompt
 - add a note that mentions that Retro does not display a prompt
 - fixed typos (rick_carlino)
+
 ## Testing
 
 - add small test images for each instruction
